--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				<div class="carousel-item my-carousel-item active">
 					<img src="images1/4.png" class="d-block  w-100 h-25" alt="...">
 					<div class="carousel-caption d-none d-md-block carousel-new-caption">
-						<h3><font color="#FF0000">The first INTERNATIONAL CONFERENCE ON</font></h3>
-						<h3><font color="#FF0000"> DIGITIZATION,INTELLIGENCE And SECURITY</font></h3>
+						<h3><font color="#FF0000">The First International Conference On</font></h3>
+						<h3><font color="#FF0000"> Digitization,Intelligence And Security</font></h3>
 						<h3> <font color="#FF0000"></font></h3>
 						<h4><font color="#FF0000">Nanjing, China, 11 - 12 November 2022</font></h4>
 					</div>
