--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 		</style>
 
 	</head>
-	<body>
+	<body hidden="hidden">
 		<p>
 			Provable security is an essential tool used to analyse security of modern cryptographic primitives for achieving high assurance of trusted and secure cyber systems. Provable Security methodology contributed greatly to the analysis of cryptographic schemes and protocols, as well as their implementations in trusted and secure systems. However, cryptographic primitives without a rigorous "proof" cannot be regarded as sound. Though not formally analysed, cryptographic schemes and protocols were once considered secured, but security flaws in these schemes and protocols implementation were discovered using Provable Security methodology. Although Provable Security provides confidence in using cryptographic schemes and protocols for various real-world applications, schemes with Provable Security are sometimes not efficient enough for practical purpose, and it may be difficult to verify the correctness of the proofs.
 		</p>
