--- a/callForPaper.html
+++ b/callForPaper.html
@@ -23,7 +23,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body hidden="hidden">
 	<p>Authors are invited to submit original research papers on provable and practical security. 
 	Areas of interest include, but are not limited to:</p>
 	
