--- a/acceptedPaper.html
+++ b/acceptedPaper.html
@@ -22,7 +22,7 @@
 			}
 		</style>
 	</head>
-	<body>	
+	<body hidden="hidden">	
 		<p><strong>The conference proceeding can be download at</strong> 
 					<a href="https://link.springer.com/book/10.1007/978-3-031-20917-8." target="_blank" style="color: rgb(85, 0, 255);">
 					https://link.springer.com/book/10.1007/978-3-031-20917-8.
